EHO-497, IE10 fix, the input fields were not aligned

--- a/eHour-wicketweb/src/main/java/net/rrm/ehour/ui/timesheet/panel/css/timesheetForm.css
+++ b/eHour-wicketweb/src/main/java/net/rrm/ehour/ui/timesheet/panel/css/timesheetForm.css
@@ -226,10 +226,11 @@ td.lockeddaynocomment {
 .timesheetTable input {
     border: 1px solid #cfdbe6;
     margin: 5px 1px 5px 0;
-    font: 1em/1.5em Geneva, Arial, Helvetica, sans-serif;
+    font: 1em/21px Geneva, Arial, Helvetica, sans-serif;
     color: #536e87;
     background-color: white;
     text-align: center;
+    height: 21px;
 }
 
 .timesheetTable tr.totalRow {
